2023-08-14T08:09:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5853383714 # 1815
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
* notice: last 14d: unq all: 71 129
* notice: prev accum: outdated-unq outdated-all / unq all: 1445 4887 / 1531 5012
* notice: next accum: outdated-unq outdated-all / unq all: 1446 4888 / 1535 5017
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2023-07-31] / [2023-08-14]

2023-08-14T00:35:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5850460131 # 1814
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
* notice: last 14d: unq all: 69 125
* notice: prev accum: outdated-unq outdated-all / unq all: 1445 4887 / 1531 5011
* notice: next accum: outdated-unq outdated-all / unq all: 1445 4887 / 1531 5012
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-08-13]

2023-08-13T16:08:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5848312151 # 1813
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-13
* notice: last 14d: unq all: 69 124
* notice: prev accum: outdated-unq outdated-all / unq all: 1444 4885 / 1531 5011
* notice: next accum: outdated-unq outdated-all / unq all: 1445 4887 / 1531 5011
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-30] / []

2023-08-13T08:08:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5846194795 # 1812