@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-14T08:09:53Z",
+  "timestamp" : "2023-08-14T16:08:52Z",
   "count_outdated" : 4888,
   "uniques_outdated" : 1446,
-  "count" : 5017,
-  "uniques" : 1535,
+  "count" : 5018,
+  "uniques" : 1536,
   "clones" : [
     {
       "timestamp": "2023-08-02T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2023-08-14T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 6,
+      "count_minmax": [ 5, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
