@@ -1,3 +1,12 @@
+2023-08-14T16:08:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5857994741 # 1816
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
+* notice: last 14d: unq all: 71 130
+* notice: prev accum: outdated-unq outdated-all / unq all: 1446 4888 / 1535 5017
+* notice: next accum: outdated-unq outdated-all / unq all: 1446 4888 / 1536 5018
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +5 +6 -0 -0 / 5 6
+* notice: removed / changed dates: [] / [2023-08-14]
+
 2023-08-14T08:09:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5853383714 # 1815
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
